CVS code -
- General
	- Fixed null_at to ACTUALLY DO SOMETHING with its arg.  Again,
	  this was causing nasty errors if the call to nrealloc moved
	  where the data was located.
	- Changed header comments to say "version 2" instead of "version
	  1" as the COPYING file is actually version 2 of the GPL (bug
	  noticed by Jordi Mallach).
- cut.c:
  do_cut_text()
	- Backported 1.1 fixes for just doing edit_update when we cut
	  text instead of edit_update.
  do_uncut_text()
	- Backported David Lawrence Ramsey's fixes for doing refresh
	  instead of edit_update when uncutting text.
  cut_marked_segment()
	- Fix off-by one in mem allocation.
- nano.c:
  main()
	- Ignore 26 (control-]) (bug discovered by David Lawrence Ramsey)
	- Add Esc-[-[IGL] keys for FreeBSD Console (PgUp,PgDn,Insert).
- nano.texi:
	- Backported fix from 1.1 for Mouse Toggle.
- po/de.po:
	- Updated German translation (Karl Eichwalder).

nano 1.0.5 - 10/03/2001
- cut.c:
  do_cut_text()
	- Don't recenter the line when cutting one line (David Lawrence
	  Ramsey) (BUG #65).
  cut_marked_segment()
	- Add magic line when cutting a selection including filebot 
	  (discovered by David Lawrence Ramsey, fixed by DLR & Chris,
	  fixes BUG #66).
- winio.c:
	- Added David Lawrence Ramsey to credits.
- po/nl.po:
	- New Dutch translation, by Guus Sliepen <guus@nl.linux.org>.
- po/ca.po:
	- Updates to Catalan translation (Jordi).
- po/da.po:
	- New Danish translation, by Keld Simonsen <keld@dkuug.dk>.
- po/it.po:
	- Italian updates (Marco Colombo).
- po/fi.po:
	- Finnish update (Pauli Virtanen).

nano 1.0.4 - 08/24/2001
- General
	- Added BUGS #63 & 64.  Fixes in search_init() and nanogetstr(),
	  new flag CLEAR_BACKUPSTRING because there's no easy way to
	  clear the backupstring without making it global (messy), so we
	  use a flag instead (just as messy?)
- files.c:
  do_browser()
	- More Picoish keystrokes for the browser, ^P, ^N, etc, for up,
	  down, etc, and add the consistent ^C to exit (Jim Knoble).